--- a/gallinews/pubspec.yaml
+++ b/gallinews/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   stacked_page_view: any
   easy_search_bar: any
   intrinsic_grid_view: any
+  http: any
+  flutter_html: any
 
 
   # The following adds the Cupertino Icons font to your application.
