--- a/gallinews/pubspec.yaml
+++ b/gallinews/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
     sdk: flutter
   stacked_page_view: any
   easy_search_bar: any
-  intrinsic_grid_view: any
   http: any
   flutter_html: any
   url_launcher: any
+  loop_page_view: any
 
 
   # The following adds the Cupertino Icons font to your application.
